finalize organizations CRUD

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <style src='*'></style>
         <style src='./index.css'></style>
     </head>
-    <body id="app" data-page=",,," class="font-sans leading-none text-gray-700 antialiased">
+    <body id="app" data-page=',,,' class="font-sans leading-none text-gray-700 antialiased">
         <!-- reference to the client script -->
         <script type="module" src="./app.imba"></script>
     </body>
